     https://github.com/mozilla-b2g/gaia/tree/master/apps/keyboard/js/imes/latin/dictionaries,
     as for other languages that already use this feature).
    -Better suggestions for English learners: irregular verbs, nouns, and adjectives now
     usually have a better suggestion. For example, 'thinked' suggests 'thought',
     'womans' suggests 'women'.

-Persian:
    -added initial support for Persian (Farsi)

-French:
    -added a synthesizer - the agreement rule can now make suggestions
     for some errors.
    -added/improved several rules

-German:
    -Fixed a rare NullPointerException and an ArrayIndexOutOfBoundsException
    -Fixed several false alarms
    -New rule that checks for sentences without a verb (turned off by default due to
     the risk of false alarms)
    -New rule that checks if a weekday matches a date, e.g. detects
    "Dienstag, 29.9.2014", as that date isn't a Tuesday.
    
-Portuguese:
    -added/improved several rules
    -added many dozens of compound words

-Russian:
    -added new rules    
    -fix sf feature request #38
     
-Spanish:
    -Added new POS category Z (for spelled numbers, e.g. 'uno', 'dos', ...)
    -Spelled numbers can now be detected and managed both in disambiguation and rules.
    -Improved LO/OO menus translation
    -Updated Community site translation
    -Spelled numbers can be now detected and managed both in disambiguation and rules
    -Fixed some incorrect lemmas in POS dictionary
    -Added Hybrid chunker-disambiguator.

-Tamil:
    -Added initial support for Tamil. If the font for Tamil is not properly
     displayed on your computer and you're using Windows, you might need
     to apply the work around described here:
     https://bugs.openjdk.java.net/browse/JDK-8008572


-API:
    -Removed several classes and methods that had been deprecated since version 2.6
    -The signature of Language.getRelevantRules() has changed.