@@ -29,6 +29,11 @@ USA
 -->
 
 <!--suppress CheckTagEmptyBody -->
+<!DOCTYPE rules [
+    <!ENTITY weekdays "Monday|Tuesday|Wednesday|Thursday|Friday|Saturday|Sunday">
+    <!ENTITY months "January|February|March|April|May|June|July|August|September|October|November|December">
+]>
+
 <rules lang="en" xsi:noNamespaceSchemaLocation="../../../../../../../../../languagetool-core/src/main/resources/org/languagetool/rules/rules.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <!-- ====================================================================== -->
     <!-- Possible typos -->
@@ -864,7 +869,7 @@ USA
         <pattern>
             <marker>
             <token>in</token>
-                <token regexp="yes">January|February|March|April|May|June|July|August|September|October|November|December</token>
+                <token regexp="yes">&months;</token>
             </marker>
             <token regexp="yes">[1-3][0-9]</token>
             </pattern>
@@ -10430,7 +10435,7 @@ USA
                     <exception regexp="yes">1[789]\d\d</exception><!-- exclude, might be year -->
                     <exception regexp="yes">20[0123]\d</exception><!-- exclude, might be year -->
                     <exception postag="NNP"/><exception scope="previous" postag="DT|PRP\$|POS" postag_regexp="yes"/>
-                    <exception regexp="yes" scope="previous">January|February|March|April|May|June|July|August|September|October|November|December|category|size|\$\d+</exception>
+                    <exception regexp="yes" scope="previous">&months;|category|size|\$\d+</exception>
                     <exception spacebefore="no" scope="previous">.</exception>
                     <exception scope="previous">×</exception>
                 </token>
@@ -10445,8 +10450,8 @@ USA
                         <exception>will</exception>
                         <exception>are</exception> <!-- chunker treats it as E-NP-singular at times... -->
                         <exception regexp="yes">lb|yd|ft|Msec|[kcm]m|[km]g|gm|stat|[ck]c|hr|min|m3|mcg|cpu|[KMGk]B|kelvin|saw|percent</exception>
-                        <exception regexp="yes">January|February|March|April|May|June|July|August|September|October|November|December|size|\$\d+|\d+|\)</exception>
-                        <exception regexp="yes">Monday|Tuesday|Wednesday|Thursday|Friday|Saturday|Sunday</exception>
+                        <exception regexp="yes">&months;|size|\$\d+|\d+|\)</exception>
+                        <exception regexp="yes">&weekdays;</exception>
                         <exception>year</exception><!-- "16 year old Ahmad" -->
                         <exception>trained</exception><!-- "300 to 400 being trained each year" - mistagging by OpenNLP -->
                         <exception>caused</exception>
@@ -11501,7 +11506,7 @@ USA
         <rule id="COMMA_MONTH_DATE" name="Comma after a month name in a date">
         <pattern>
             <marker>
-                <token regexp="yes">January|February|March|April|May|June|July|August|September|October|November|December</token>
+                <token regexp="yes">&months;</token>
                 <token>,</token>
                 <token regexp="yes">[1-3][0-9]{3}</token>
             </marker>
@@ -14497,6 +14502,61 @@ USA
             <example type="incorrect">The <marker>security protection software</marker> we offer is the state-of-the art achievement.</example>
             <example type="correct">The security software we offer is the state-of-the art achievement.</example>
         </rule>
+    </category>
+    <category name="Semantic" type="inconsistency">
+        <rulegroup id="DATE_WEEKDAY" name="Weekday doesn't match date">
+            <rule>
+                <pattern>
+                    <!-- "Monday, 7 October 2014" -->
+                    <token regexp="yes">&weekdays;</token>
+                    <token>,</token>
+                    <token regexp="yes">\d\d?</token>
+                    <token regexp="yes">&months;</token>
+                    <token regexp="yes">\d\d\d\d</token>
+                </pattern>
+                <filter class="org.languagetool.rules.en.DateCheckFilter" args="year:\5 month:\4 day:\3 weekDay:\1"/>
+                <message>The date \3 \4 \5 is not a \1.</message>
+                <example type='incorrect'>IGD Convention - <marker>Monday, 7 October 2014</marker></example>
+                <example type='correct'>IGD Convention - <marker>Tuesday, 7 October 2014</marker></example>
+            </rule>
+            <rule>
+                <pattern>
+                    <!-- "Monday, October 7, 2014" -->
+                    <token regexp="yes">&weekdays;</token>
+                    <token>,</token>
+                    <token regexp="yes">&months;</token>
+                    <token regexp="yes">\d\d?</token>
+                    <token>,</token>
+                    <token regexp="yes">\d\d\d\d</token>
+                </pattern>
+                <filter class="org.languagetool.rules.en.DateCheckFilter" args="year:\6 month:\3 day:\4 weekDay:\1"/>
+                <message>The date \3 \4, \6 is not a \1.</message>
+                <example type='incorrect'>IGD Convention - <marker>Monday, October 7, 2014</marker></example>
+                <example type='incorrect'>IGD Convention - <marker>Wednesday, October 7, 2014</marker></example>
+                <example type='incorrect'>IGD Convention - <marker>Thursday, October 7, 2014</marker></example>
+                <example type='incorrect'>IGD Convention - <marker>Friday, October 7, 2014</marker></example>
+                <example type='incorrect'>IGD Convention - <marker>Saturday, October 7, 2014</marker></example>
+                <example type='incorrect'>IGD Convention - <marker>Sunday, October 7, 2014</marker></example>
+                <example type='correct'>IGD Convention - <marker>Tuesday, October 7, 2014</marker></example>
+            </rule>
+            <!-- "Monday, 31/12/2014" - this can be ambiguous (e.g. 6/7/2014) and is thus commented out 
+            <rule>
+                <pattern>
+                    <token regexp="yes">&weekdays;</token>
+                    <token>,</token>
+                    <token regexp="yes">\d\d?</token>
+                    <token>/</token>
+                    <token regexp="yes">\d\d?</token>
+                    <token>/</token>
+                    <token regexp="yes">\d\d\d\d</token>
+                </pattern>
+                <filter class="org.languagetool.rules.en.DateCheckFilter" args="year:\7 month:\5 day:\3 weekDay:\1"/>
+                <message>The date \3/\5/\7 is not a \1.</message>
+                <example type='incorrect'>IGD Convention 2014 - <marker>Monday, 7/10/2014</marker></example>
+                <example type='correct'>IGD Convention 2014 - <marker>Wednesday, 7/10/2014</marker></example>
+            </rule>
+            -->
+        </rulegroup>
     </category>
     <!-- This rule is useful only for lowercase only text after machine translation. I leave it in the
     file because it's not so bad for such input but it shouldn't be even visible in the config dialog.
