@@ -16,6 +16,11 @@ LanguageTool Change Log
     -Better suggestions for English learners: irregular verbs, nouns, and adjectives now
      usually have a better suggestion. For example, 'thinked' suggests 'thought',
      'womans' suggests 'women'.
+    -New rule that checks if a weekday matches a date, e.g. detects
+     "Monday, 7 October 2014", as that date isn't a Monday. This rule will only
+     work if it detects the date format in use. So far, only these formats are supported:
+     * "Monday, 7 October 2014"
+     * "Monday, October 7, 2014"
 
 -Persian:
     -added initial support for Persian (Farsi)
@@ -31,7 +36,7 @@ LanguageTool Change Log
     -New rule that checks for sentences without a verb (turned off by default due to
      the risk of false alarms)
     -New rule that checks if a weekday matches a date, e.g. detects
-    "Dienstag, 29.9.2014", as that date isn't a Tuesday.
+     "Dienstag, 29.9.2014", as that date isn't a Tuesday.
     
 -Portuguese:
     -added/improved several rules
